syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Trd_Common.proto";

message TrdGetHistoryOrderListRequest
{
	required TrdHeader header = 1; //交易公共参数头
	required TrdFilterConditions filterConditions = 2; //过滤条件
	repeated int32 filterStatusList = 3; //需要过滤的订单状态列表
}

message TrdGetHistoryOrderListResponse
{
	required TrdHeader header = 1; //交易公共参数头
	repeated Order orderList = 2; //历史订单列表
}

message TrdGetHistoryOrderListRequest_Internal
{
	required TrdGetHistoryOrderListRequest payload = 1;
}

message TrdGetHistoryOrderListResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required int32 retType = 1 [default = -400];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdGetHistoryOrderListResponse payload = 4;
}
